--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -3,7 +3,7 @@ _src_path: /Users/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
 helm: false
-homepageDescription: eBook Library
+homepageDescription: eBook Manager
 homepageEnabled: true
 homepageGroup: Media
 homepageIcon: kavita
